--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/jiqing.png">
+            <img class="avatar" src="jiqing.png">
             <div >
                 <h3>激勤游戏</h3>
                 <p>国服关羽(全栈开发者)</p>
